<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pic"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="趣  图"
        android:textColor="@color/primary"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/user_name"
            style="@style/etTextStyle"
            android:digits="@string/text"
            android:drawableLeft="@drawable/username_selector"
            android:hint="@string/username_et" />

        <EditText
            android:id="@+id/password"
            style="@style/etTextStyle"
            android:layout_below="@id/user_name"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/pwd_selector"
            android:hint="@string/pwd_et"
            android:inputType="textPassword" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/ask"
        android:text="@string/forget"
        android:textColor="@color/white" />

    <Button

        android:id="@+id/btn_login"
        style="@style/btn_style"
        android:text="登录"

        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_to_regist"
        style="@style/btn_style"
        android:text="快速注册"

        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>